# menu-cli

./: Cargo.toml  README.md  install.sh
src/: api.rs  config.rs  main.rs  printer.rs
