[package]
name = "menu-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"]}
reqwest = {version = "0.11.9", features = ["blocking"]}
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
anyhow = "1.0.55"
chrono = {version = "0.4.19", features = ["serde"]}
confy = {version = "0.4.0"}
textwrap = "0.15.0"